update to EIS 0.6.2, update build tools